--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dconfusion"
-version = "0.1.1"
+version = "0.2.0"
 description = "A package for working with confusion matrices. It can pretty print a confusion matrix, its frequencies and various other metrics."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -15,6 +15,21 @@ authors = [
     { name = "Aadya Pawar", email = "pawar17@purdue.edu" },
 ]
 keywords = ["confusion", "matrix"]
+dependencies = [
+  "numpy", "typing"
+]
+
+classifiers = [
+    # How mature is this project?
+    "Development Status :: 1 - Planning",
+
+    # Indicate who your project is intended for
+    "Intended Audience :: Developers",
+    "Intended Audience :: Education",
+    "Natural Language :: English",
+
+    "Typing :: Typed"
+]
 
 [project.urls]
  Homepage = "https://github.com/sgundava/dconfusion"
