--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dconfusion"
-version = "0.2.0"
+version = "0.2.1"
 description = "A package for working with confusion matrices. It can pretty print a confusion matrix, its frequencies and various other metrics."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -16,7 +16,7 @@ authors = [
 ]
 keywords = ["confusion", "matrix"]
 dependencies = [
-  "numpy", "typing"
+  "numpy", "typing", "matplotlib"
 ]
 
 classifiers = [
