--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dconfusion"
-version = "1.0.1a"
+version = "1.0.2"
 description = "A package for working with confusion matrices."
 readme = "README.md"
 requires-python = ">=3.8"
